@@ -1,35 +1,29 @@
 package curs.controller;
 
-import curs.dto.ProductDTO;
+import curs.dto.ProductDto;
 import curs.mapper.ProductMapper;
-import curs.model.Product;
 import curs.service.ProductService;
-import org.springframework.http.ResponseEntity;
+import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/products")
-@CrossOrigin(origins = "http://localhost:3000")
+@RequiredArgsConstructor
 public class ProductController {
-    private final ProductService service;
-    public ProductController(ProductService service) { this.service = service; }
 
-    @GetMapping
-    public ResponseEntity<?> all() {
-        List<ProductDTO> dtos = service.getAll().stream().map(ProductMapper::toDTO).collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+    private final ProductService productService;
+
+    @GetMapping("")
+    public List<ProductDto> all() {
+        return productService.findAll()
+                .stream().map(ProductMapper::toDto).toList();
     }
 
-    @PostMapping
-    public ResponseEntity<?> create(@RequestBody ProductDTO dto) {
-        Product p = ProductMapper.toEntity(dto);
-        if (dto.getSupplierId() != null) {
-            Product tmp = new Product(); tmp.setSupplier(new curs.model.Supplier()); tmp.getSupplier().setId(dto.getSupplierId()); p.setSupplier(tmp.getSupplier());
-        }
-        Product saved = service.create(p);
-        return ResponseEntity.ok(ProductMapper.toDTO(saved));
+    @GetMapping("/supplier/{id}")
+    public List<ProductDto> bySupplier(@PathVariable Long id) {
+        return productService.findBySupplier(id)
+                .stream().map(ProductMapper::toDto).toList();
     }
 }
